--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,5 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Noto Sans', sans-serif;
+}
+
+.flex{
+    display: flex;
+}
+
+.width-80-auto{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.white{
+    color: #fff;
+}
+
+.margin-left{
+    margin-left: 10px;
 }
