Fix-esercizio-completo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ main section .container-shop:hover .heart{
 /* FOOTER */
 footer{
     background-color: #1a1a1a;
-    padding: 20px;
+    padding: 20px 0;
 }
 
 .container-footer{
